# Search-Daemon

./: .gitignore  com.search-daemon.plist  com.search-menu-bar.plist  config.yaml  install_service.sh  pyproject.toml
search_daemon/: __main__.py  cache.py  chunker.py  config.py  embedder.py  indexer.py  menu_bar.py  parser.py  reindexer.py  status.py  store.py  watcher.py
